correctif gap input

--- a/frontend/src/components/Elements/InputResume.scss
+++ b/frontend/src/components/Elements/InputResume.scss
@@ -7,6 +7,7 @@
     border: none;
     outline: none;
     background-color: $buttonColorLight;
+    padding-top: 5%;
     color: $textColorDark;
     width: 100%;
     height: 48px;
